tests/baselines/reference/getJavaScriptSyntacticDiagnostics02.baseline
Syntactic Diagnostics for file '/tests/cases/fourslash/server/getJavaScriptSyntacticDiagnostics02.ts':
/tests/cases/fourslash/server/b.js(2,8): error TS8010: Type annotations can only be used in TypeScript files.
/tests/cases/fourslash/server/b.js(3,17): error TS8010: Type annotations can only be used in TypeScript files.
/tests/cases/fourslash/server/b.js(4,5): error TS1389: 'var' is not allowed as a variable declaration name.
/tests/cases/fourslash/server/b.js(4,9): error TS1134: Variable declaration expected.
/tests/cases/fourslash/server/b.js(4,11): error TS1134: Variable declaration expected.


==== /tests/cases/fourslash/server/b.js (5 errors) ====
    var a = "a";
    var b: boolean = true;
           ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    function foo(): string { }
                    ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var var = "c";
        ~~~
!!! error TS1389: 'var' is not allowed as a variable declaration name.
            ~
!!! error TS1134: Variable declaration expected.
              ~~~
!!! error TS1134: Variable declaration expected.

Semantic Diagnostics for file '/tests/cases/fourslash/server/getJavaScriptSyntacticDiagnostics02.ts':


==== /tests/cases/fourslash/server/b.js (0 errors) ====
    var a = "a";
    var b: boolean = true;
    function foo(): string { }
    var var = "c";